# phenoAI

./: .gitignore  LICENSE  MANIFEST.in  PUBLISH_TO_PYPI.md  README.md  READY_TO_LAUNCH.md  pyproject.toml  requirements.txt  setup.py  test_installation.py
Model/: Basic_Vegetation_Model.h5
phenoAI/: __init__.py  cli.py  gui.py
phenoAI/analysis/: __init__.py  phenology.py  statistics.py  time_series.py  vegetation_indices.py
phenoAI/core/: __init__.py  analyzer.py  config.py  exceptions.py  logger.py
phenoAI/pipeline/: __init__.py  batch_processor.py  workflow.py
phenoAI/preprocessing/: __init__.py  atmospheric_correction.py  image_enhancement.py  quality_control.py
phenoAI/utils/: __init__.py  date_utils.py  file_handlers.py  math_utils.py
